super simple input stuff

--- a/MyProject.vcxproj.filters
+++ b/MyProject.vcxproj.filters
@@ -7,11 +7,17 @@
     <Filter Include="include\drc-test">
       <UniqueIdentifier>{7E8C303C-6A85-4F8E-93B7-34137F0F2F9A}</UniqueIdentifier>
     </Filter>
+    <Filter Include="include\window">
+      <UniqueIdentifier>{70DC6774-5CAA-5B7A-453E-CCA031AB37DF}</UniqueIdentifier>
+    </Filter>
     <Filter Include="source">
       <UniqueIdentifier>{76FF3A1C-62A1-65F2-4B5C-7946379DEC42}</UniqueIdentifier>
     </Filter>
     <Filter Include="source\drc-test">
       <UniqueIdentifier>{0B1746BF-77A2-B383-80B3-3678ECBD0F84}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="source\window">
+      <UniqueIdentifier>{BD5F8F8F-2920-0BC6-F25A-54435EDA4FA2}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -20,6 +26,18 @@
     </ClInclude>
     <ClInclude Include="include\drc-test\utils.h">
       <Filter>include\drc-test</Filter>
+    </ClInclude>
+    <ClInclude Include="include\input.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\logger.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\window\test_types.h">
+      <Filter>include\window</Filter>
+    </ClInclude>
+    <ClInclude Include="include\window\window.h">
+      <Filter>include\window</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -31,6 +49,9 @@
     </ClCompile>
     <ClCompile Include="source\main.cpp">
       <Filter>source</Filter>
+    </ClCompile>
+    <ClCompile Include="source\window\window.cpp">
+      <Filter>source\window</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
